--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Crypto Wallet WebRTC Calls</title>
-  <!-- Include socket.io client -->
-  <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
   <h2>Call via Crypto Wallet</h2>
   <button onclick="connectWallet()">Connect Wallet</button>
-  <input id="recipientAddress" placeholder="Enter wallet to call" />
+  <input id="recipientAddress" placeholder="Enter wallet address to call" />
   <button onclick="startCall()">Call</button>
-  <video id="localVideo" autoplay muted></video>
-  <video id="remoteVideo" autoplay></video>
+  
+  <div style="margin-top:1rem;">
+    <video id="localVideo" autoplay muted style="width:300px; background: #ccc;"></video>
+    <video id="remoteVideo" autoplay style="width:300px; background: #ccc;"></video>
+  </div>
 
+  <!-- Socket.IO client script (automatically served by server.js) -->
+  <script src="/socket.io/socket.io.js"></script>
   <script>
-    let socket, walletAddress, peerConnection;
+    let socket;
+    let walletAddress = null;
+    let peerConnection = null;
     let currentCallRecipient = null;
 
     async function connectWallet() {
@@ -26,32 +31,36 @@
       }
       try {
         const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
-        walletAddress = accounts[0];
-        alert(`Connected wallet: ${walletAddress}`);
+        walletAddress = accounts[0].toLowerCase(); // normalize address
+        alert('Connected wallet: ' + walletAddress);
 
-        // Initialize Socket.io connection
+        // Initialize Socket.io
         socket = io();
 
+        // On connect, tell server which wallet we are
         socket.on('connect', () => {
-          console.log("Socket.io connected:", socket.id);
-          // Join your wallet "room" on the server
+          console.log('Socket.io connected as', socket.id);
           socket.emit('join', walletAddress);
         });
 
-        // Handle incoming signals (offer/answer)
+        // Handle incoming SDP signals (offer/answer)
         socket.on('signal', async (data) => {
           if (!peerConnection) {
             createPeerConnection();
           }
-          if (data.wallet !== walletAddress && data.signal) {
-            console.log('Received SDP signal from:', data.wallet, data.signal.type);
+          if (data.wallet.toLowerCase() !== walletAddress && data.signal) {
+            console.log('Received signal from', data.wallet, data.signal.type);
 
             await peerConnection.setRemoteDescription(new RTCSessionDescription(data.signal));
-            // If we got an offer, create an answer
+            // If it's an offer, create an answer
             if (data.signal.type === 'offer') {
               const answer = await peerConnection.createAnswer();
               await peerConnection.setLocalDescription(answer);
-              socket.emit('signal', { wallet: data.wallet, signal: answer });
+              // Send back the answer
+              socket.emit('signal', {
+                wallet: data.wallet.toLowerCase(),
+                signal: answer
+              });
             }
           }
         });
@@ -62,18 +71,18 @@
             createPeerConnection();
           }
           if (data.candidate) {
-            console.log('Received ICE candidate from:', data.wallet);
+            console.log('Received ICE candidate from', data.wallet);
             try {
               await peerConnection.addIceCandidate(new RTCIceCandidate(data.candidate));
             } catch (err) {
-              console.error('Error adding ICE candidate', err);
+              console.error('Error adding received ICE candidate', err);
             }
           }
         });
 
-        // Attempt auto-reconnect if disconnected
+        // Attempt to reconnect if disconnected
         socket.on('disconnect', () => {
-          console.log("Socket.io disconnected. Attempting reconnect in 3s...");
+          console.log('Socket.io disconnected. Attempting reconnect in 3s...');
           setTimeout(connectWallet, 3000);
         });
       } catch (err) {
@@ -82,54 +91,59 @@
     }
 
     async function startCall() {
-      const recipient = document.getElementById('recipientAddress').value;
-      if (!recipient) {
+      const inputVal = document.getElementById('recipientAddress').value;
+      if (!inputVal) {
         alert('Enter a wallet address to call');
         return;
       }
+      const recipient = inputVal.trim().toLowerCase();
+      currentCallRecipient = recipient;
+
       if (!socket || !socket.connected) {
-        alert("Socket.io is not connected. Try reconnecting your wallet.");
+        alert('Socket.io not connected. Please reconnect your wallet.');
         return;
       }
 
-      currentCallRecipient = recipient;
-
+      // Create the RTCPeerConnection
       createPeerConnection();
 
       // Get local camera/mic
       const stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
       document.getElementById('localVideo').srcObject = stream;
-      // Add tracks to peerConnection
       stream.getTracks().forEach(track => peerConnection.addTrack(track, stream));
 
-      // Create SDP offer
+      // Create an SDP offer
       const offer = await peerConnection.createOffer();
       await peerConnection.setLocalDescription(offer);
 
-      // Send offer to the server, specifying who we want to call
-      socket.emit('signal', { wallet: recipient, signal: offer });
+      // Send the offer to the server (who will relay to recipient)
+      socket.emit('signal', {
+        wallet: recipient,
+        signal: offer
+      });
     }
 
     function createPeerConnection() {
-      if (peerConnection) return; // avoid re-creating
+      if (peerConnection) return; // Already created
 
       peerConnection = new RTCPeerConnection({
         iceServers: [{ urls: 'stun:stun.l.google.com:19302' }],
       });
 
-      // When we get a remote track, display in remoteVideo
+      // When we get a remote track, show it in remoteVideo
       peerConnection.ontrack = (event) => {
+        console.log('Received remote track');
         const remoteVideo = document.getElementById('remoteVideo');
         remoteVideo.srcObject = event.streams[0];
       };
 
-      // Collect ICE candidates and send to remote peer
+      // Send ICE candidates to the remote peer
       peerConnection.onicecandidate = (event) => {
         if (event.candidate) {
-          console.log('Sending ICE candidate to:', currentCallRecipient);
+          console.log('Sending ICE candidate to', currentCallRecipient);
           socket.emit('candidate', {
             wallet: currentCallRecipient,
-            candidate: event.candidate,
+            candidate: event.candidate
           });
         }
       };
