--- a/public/index.html
+++ b/public/index.html
@@ -2,187 +2,210 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Crypto Wallet WebRTC Calls</title>
+  <title>P2P Wallet-to-Wallet Call</title>
+  <style>
+    body { font-family: sans-serif; text-align: center; margin: 2em; }
+    #videoSection video { width: 45%; border: 1px solid #ccc; margin: 0 1%; }
+  </style>
 </head>
 <body>
-  <h2>Call via Crypto Wallet</h2>
-  <button onclick="connectWallet()">Connect Wallet</button>
-  <input id="recipientAddress" placeholder="Enter wallet address to call" />
-  <button onclick="startCall()">Call</button>
-  
-  <div style="margin-top:1rem;">
-    <video id="localVideo" autoplay muted style="width:300px; background: #ccc;"></video>
-    <video id="remoteVideo" autoplay style="width:300px; background: #ccc;"></video>
+  <h1>P2P Wallet-to-Wallet Call Demo</h1>
+
+  <!-- Login Section -->
+  <div id="loginSection">
+    <button id="loginBtn">🔑 Connect Wallet</button>
+    <p id="loginStatus"></p>
   </div>
 
-  <!-- Socket.IO client script (served by your server or via CDN) -->
-  <script src="/socket.io/socket.io.js"></script>
+  <!-- Call Section (hidden until logged in) -->
+  <div id="callSection" style="display:none;">
+    <input id="peerAddress" type="text" placeholder="Peer wallet address" size="42">
+    <button id="callBtn">📞 Call</button>
+  </div>
+
+  <!-- Video Section (hidden until in call) -->
+  <div id="videoSection" style="display:none;">
+    <h3>In Call:</h3>
+    <video id="localVideo" autoplay muted playsinline></video>
+    <video id="remoteVideo" autoplay playsinline></video>
+  </div>
+
+  <!-- Include ethers.js (CDN) BEFORE your custom script -->
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.1/dist/ethers.umd.min.js"></script>
   <script>
-    let socket;
-    let walletAddress = null;
-    let peerConnection = null;
-    let currentCallRecipient = null;
+    // Frontend Script
+    const LOGIN_MESSAGE = "Sign this message to log in to the P2P call app";
+    const ws = new WebSocket('ws://f625-45-50-98-105.ngrok-free.app');
+    let userAddress = null;
+    let pc = null;             // RTCPeerConnection
+    let localStream = null;    // MediaStream from getUserMedia
 
-    // Queue for ICE candidates that arrive before remoteDescription is set
-    let pendingCandidates = [];
+    // UI elements
+    const loginBtn = document.getElementById('loginBtn');
+    const loginStatus = document.getElementById('loginStatus');
+    const callSection = document.getElementById('callSection');
+    const peerAddressInput = document.getElementById('peerAddress');
+    const callBtn = document.getElementById('callBtn');
+    const videoSection = document.getElementById('videoSection');
+    const localVideo = document.getElementById('localVideo');
+    const remoteVideo = document.getElementById('remoteVideo');
 
-    async function connectWallet() {
+    // Request account and sign message with MetaMask (ethers.js)
+    loginBtn.onclick = async () => {
       if (!window.ethereum) {
-        alert('Please install MetaMask or another Ethereum wallet.');
+        alert("MetaMask is required to login.");
         return;
       }
       try {
-        const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
-        walletAddress = accounts[0].toLowerCase(); // normalize address
-        alert('Connected wallet: ' + walletAddress);
-
-        // Initialize Socket.io
-        socket = io();
-
-        // On connect, tell server which wallet we are
-        socket.on('connect', () => {
-          console.log('Socket.io connected as', socket.id);
-          socket.emit('join', walletAddress);
-        });
-
-        // Handle incoming SDP signals (offer/answer)
-        socket.on('signal', async (data) => {
-          // We do NOT ignore if data.wallet === walletAddress,
-          // because we want the second tab with the same address to get signals.
-
-          if (!peerConnection) {
-            createPeerConnection();
-          }
-          if (data.signal) {
-            console.log('Received signal from', data.wallet, data.signal.type);
-
-            try {
-              await peerConnection.setRemoteDescription(new RTCSessionDescription(data.signal));
-              console.log('Remote description set:', data.signal.type);
-            } catch (err) {
-              console.error('Failed to set remote description:', err);
-              return;
-            }
-
-            // If it's an offer, create an answer
-            if (data.signal.type === 'offer') {
-              const answer = await peerConnection.createAnswer();
-              await peerConnection.setLocalDescription(answer);
-
-              // Send back the answer
-              socket.emit('signal', {
-                wallet: data.wallet.toLowerCase(),
-                signal: answer
-              });
-            }
-
-            // Now that we have a remote description, handle any queued ICE candidates
-            handlePendingCandidates();
-          }
-        });
-
-        // Handle incoming ICE candidates
-        socket.on('candidate', async (data) => {
-          // Again, do NOT ignore if data.wallet === walletAddress
-          if (!peerConnection) {
-            createPeerConnection();
-          }
-          if (data.candidate) {
-            console.log('Received ICE candidate from', data.wallet);
-            // If remote description is not set yet, queue the candidate
-            if (!peerConnection.remoteDescription || !peerConnection.remoteDescription.type) {
-              console.log('Remote description not set yet. Queuing candidate.');
-              pendingCandidates.push(data.candidate);
-            } else {
-              // Remote description is ready, so we can add the candidate now
-              try {
-                await peerConnection.addIceCandidate(new RTCIceCandidate(data.candidate));
-              } catch (err) {
-                console.error('Error adding received ICE candidate', err);
-              }
-            }
-          }
-        });
-
-        // Attempt to reconnect if disconnected
-        socket.on('disconnect', () => {
-          console.log('Socket.io disconnected. Attempting reconnect in 3s...');
-          setTimeout(connectWallet, 3000);
-        });
+        // Connect to MetaMask
+        await window.ethereum.request({ method: 'eth_requestAccounts' });
+        const provider = new ethers.providers.Web3Provider(window.ethereum);
+        const signer = provider.getSigner();
+        const address = await signer.getAddress();
+        // Sign the login message
+        const signature = await signer.signMessage(LOGIN_MESSAGE);
+        // Send login request to server
+        const loginReq = { type: 'login', address, signature };
+        ws.send(JSON.stringify(loginReq));
       } catch (err) {
-        console.error('Error connecting wallet:', err);
+        console.error("Login failed:", err);
+        alert("Wallet login/signature failed.");
       }
-    }
+    };
 
-    async function startCall() {
-      const inputVal = document.getElementById('recipientAddress').value;
-      if (!inputVal) {
-        alert('Enter a wallet address to call');
-        return;
-      }
-      const recipient = inputVal.trim().toLowerCase();
-      currentCallRecipient = recipient;
-
-      if (!socket || !socket.connected) {
-        alert('Socket.io not connected. Please reconnect your wallet.');
-        return;
-      }
-
-      createPeerConnection();
-
-      // Get local camera/mic
-      const stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
-      document.getElementById('localVideo').srcObject = stream;
-      stream.getTracks().forEach(track => peerConnection.addTrack(track, stream));
-
-      // Create an SDP offer
-      const offer = await peerConnection.createOffer();
-      await peerConnection.setLocalDescription(offer);
-
-      // Send the offer to the server (which relays it to "recipient")
-      socket.emit('signal', {
-        wallet: recipient,
-        signal: offer
-      });
-    }
-
-    function createPeerConnection() {
-      if (peerConnection) return; // Already created
-
-      peerConnection = new RTCPeerConnection({
-        iceServers: [{ urls: 'stun:stun.l.google.com:19302' }],
-      });
-
-      // When we get a remote track, show it in remoteVideo
-      peerConnection.ontrack = (event) => {
-        console.log('Received remote track');
-        const remoteVideo = document.getElementById('remoteVideo');
-        remoteVideo.srcObject = event.streams[0];
+    // Initialize WebRTC peer connection and event handlers
+    function setupPeerConnection() {
+      // STUN server configuration (public STUN servers to get ICE candidates)
+      const config = { 
+        iceServers: [{ urls: 'stun:stun.l.google.com:19302' }] 
       };
+      pc = new RTCPeerConnection(config);
 
-      // When ICE candidates are generated locally, send them to the remote
-      peerConnection.onicecandidate = (event) => {
+      // When we get a local ICE candidate, send it to the peer via server
+      pc.onicecandidate = event => {
         if (event.candidate) {
-          console.log('Sending ICE candidate to', currentCallRecipient);
-          socket.emit('candidate', {
-            wallet: currentCallRecipient,
+          ws.send(JSON.stringify({
+            type: 'ice-candidate',
+            target: peerAddressInput.value,
             candidate: event.candidate
-          });
+          }));
         }
       };
+
+      // When remote track arrives, show it in the remote video element
+      pc.ontrack = event => {
+        console.log('Received remote track');
+        if (remoteVideo.srcObject !== event.streams[0]) {
+          remoteVideo.srcObject = event.streams[0];
+        }
+      };
+
+      // Add all local tracks (audio/video) to the peer connection
+      localStream.getTracks().forEach(track => pc.addTrack(track, localStream));
     }
 
-    function handlePendingCandidates() {
-      pendingCandidates.forEach(async (candidateObj) => {
+    // Handle messages from the signaling server
+    ws.onmessage = async (event) => {
+      const msg = JSON.parse(event.data);
+      console.log('Received message', msg);
+      switch (msg.type) {
+        case 'login-success':
+          userAddress = msg.address;
+          loginStatus.textContent = "Connected as: " + userAddress;
+          // Show call UI
+          callSection.style.display = 'block';
+          break;
+        case 'incoming-call':
+          // Another user is calling us
+          const caller = msg.from;
+          peerAddressInput.value = caller;
+          alert(`Incoming call from ${caller}!`);
+          startCall(false); // start call as callee (don't create offer immediately)
+          break;
+        case 'call-ack':
+          // Server confirmed target is available, proceed to make an offer
+          startCall(true); // as caller
+          break;
+        case 'offer':
+          // Received WebRTC offer from a caller
+          if (!pc) {
+            console.log('Offer received, setting up peer connection (callee)');
+            await startCall(false);
+          }
+          await pc.setRemoteDescription(new RTCSessionDescription(msg.sdp));
+          // Create answer and send back
+          const answer = await pc.createAnswer();
+          await pc.setLocalDescription(answer);
+          ws.send(JSON.stringify({ 
+            type: 'answer', 
+            target: msg.from, 
+            sdp: pc.localDescription 
+          }));
+          break;
+        case 'answer':
+          // Got answer from callee (we are the caller)
+          await pc.setRemoteDescription(new RTCSessionDescription(msg.sdp));
+          break;
+        case 'ice-candidate':
+          // Received ICE candidate from peer
+          if (pc && msg.candidate) {
+            try {
+              await pc.addIceCandidate(msg.candidate);
+            } catch (err) {
+              console.error("Error adding received ICE candidate", err);
+            }
+          }
+          break;
+        case 'error':
+          console.error("Server error:", msg.error);
+          alert(msg.error);
+          break;
+      }
+    };
+
+    // Start a call. If isCaller, we create the offer; if not, we wait for the offer.
+    async function startCall(isCaller) {
+      // Get media only once and reuse stream if already active
+      if (!localStream) {
         try {
-          await peerConnection.addIceCandidate(new RTCIceCandidate(candidateObj));
+          localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
+          localVideo.srcObject = localStream;
         } catch (err) {
-          console.error('Error adding queued ICE candidate', err);
+          alert("Could not access camera/microphone: " + err);
+          return;
         }
-      });
-      pendingCandidates = [];
+      }
+      // Show video elements
+      videoSection.style.display = 'block';
+      // Create peer connection and add tracks
+      setupPeerConnection();
+      if (isCaller) {
+        // Caller: create an offer and send to the callee
+        const offer = await pc.createOffer();
+        await pc.setLocalDescription(offer);
+        ws.send(JSON.stringify({ 
+          type: 'offer', 
+          target: peerAddressInput.value, 
+          sdp: pc.localDescription 
+        }));
+      }
     }
+
+    // Call button initiates the call signaling
+    callBtn.onclick = () => {
+      const target = peerAddressInput.value.trim();
+      if (!target) {
+        alert("Please enter a peer address to call.");
+        return;
+      }
+      if (!userAddress) {
+        alert("You must login first.");
+        return;
+      }
+      // Send call request to server
+      ws.send(JSON.stringify({ type: 'call', target }));
+      // (We wait for 'call-ack' before creating offer)
+    };
   </script>
 </body>
 </html>
