--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <script>
     // Frontend Script
     const LOGIN_MESSAGE = "Sign this message to log in to the P2P call app";
-    const ws = new WebSocket('ws://f625-45-50-98-105.ngrok-free.app');
+    const ws = new WebSocket('wss://f625-45-50-98-105.ngrok-free.app');
     let userAddress = null;
     let pc = null;             // RTCPeerConnection
     let localStream = null;    // MediaStream from getUserMedia
