--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,46 @@
   <script>
     // Frontend Script
     const LOGIN_MESSAGE = "Sign this message to log in to the P2P call app";
-    const ws = new WebSocket('wss://f625-45-50-98-105.ngrok-free.app');
+const endpoints = [
+    'wss://test-ninx-production.up.railway.app',
+    'wss://test-gns5-production.up.railway.app'
+];
+
+let ws;
+let connected = false;
+
+for (const endpoint of endpoints) {
+    try {
+        ws = new WebSocket(endpoint);
+        
+        ws.onopen = () => {
+            console.log(`Connected to ${endpoint}`);
+            connected = true;
+        };
+
+        ws.onerror = (error) => {
+            console.error(`WebSocket error on ${endpoint}`, error);
+            if (!connected) {
+                ws.close();
+            }
+        };
+
+        ws.onclose = () => {
+            if (!connected) {
+                console.log(`Connection failed to ${endpoint}, trying next...`);
+            }
+        };
+
+        await new Promise(resolve => setTimeout(resolve, 2000)); // Wait for connection attempt
+        if (connected) break; // Stop trying if connected
+    } catch (err) {
+        console.error(`Failed to connect to ${endpoint}:`, err);
+    }
+}
+
+if (!connected) {
+    console.error("Failed to connect to any WebSocket endpoint.");
+}
     let userAddress = null;
     let pc = null;             // RTCPeerConnection
     let localStream = null;    // MediaStream from getUserMedia
