--- a/public/index.html
+++ b/public/index.html
@@ -33,54 +33,56 @@
   <!-- Include ethers.js (CDN) BEFORE your custom script -->
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.1/dist/ethers.umd.min.js"></script>
   <script>
-    // Frontend Script
+    // Declare WebSocket globally so all parts of the script can access it.
+    let ws = null;
     const LOGIN_MESSAGE = "Sign this message to log in to the P2P call app";
-  (async function initWebSocket() {
-    const endpoints = [
-      'wss://test-ninx-production.up.railway.app',
-      'wss://test-gns5-production.up.railway.app'
-    ];
 
-    let ws;
-    let connected = false;
+    // Initialize the WebSocket connection inside an async IIFE.
+    (async function initWebSocket() {
+      const endpoints = [
+        'wss://test-ninx-production.up.railway.app',
+        'wss://test-gns5-production.up.railway.app'
+      ];
 
-    for (const endpoint of endpoints) {
-      try {
-        ws = new WebSocket(endpoint);
+      let connected = false;
 
-        ws.onopen = () => {
-          console.log(`Connected to ${endpoint}`);
-          connected = true;
-        };
+      for (const endpoint of endpoints) {
+        try {
+          const socket = new WebSocket(endpoint);
 
-        ws.onerror = (error) => {
-          console.error(`WebSocket error on ${endpoint}`, error);
-          if (!connected) {
-            ws.close();
-          }
-        };
+          socket.onopen = () => {
+            console.log(`Connected to ${endpoint}`);
+            connected = true;
+            ws = socket; // assign to the global variable
+          };
 
-        ws.onclose = () => {
-          if (!connected) {
-            console.log(`Connection failed to ${endpoint}, trying next...`);
-          }
-        };
+          socket.onerror = (error) => {
+            console.error(`WebSocket error on ${endpoint}`, error);
+            if (!connected) {
+              socket.close();
+            }
+          };
 
-        // Wait for the connection attempt to resolve
-        await new Promise(resolve => setTimeout(resolve, 2000));
-        if (connected) break; // Stop trying if connected
-      } catch (err) {
-        console.error(`Failed to connect to ${endpoint}:`, err);
+          socket.onclose = () => {
+            if (!connected) {
+              console.log(`Connection failed to ${endpoint}, trying next...`);
+            }
+          };
+
+          // Wait for a moment to see if connection succeeds
+          await new Promise(resolve => setTimeout(resolve, 2000));
+          if (connected) break; // Stop trying once connected
+        } catch (err) {
+          console.error(`Failed to connect to ${endpoint}:`, err);
+        }
       }
-    }
 
-    if (!connected) {
-      console.error("Failed to connect to any WebSocket endpoint.");
-    } else {
-      // Setup the rest of your WebSocket-dependent logic here
-      window.ws = ws; // make ws available globally if needed
-    }
-  })();
+      if (!connected) {
+        console.error("Failed to connect to any WebSocket endpoint.");
+      }
+    })();
+
+    // Declare variables for login, call, and video handling
     let userAddress = null;
     let pc = null;             // RTCPeerConnection
     let localStream = null;    // MediaStream from getUserMedia
@@ -95,10 +97,15 @@
     const localVideo = document.getElementById('localVideo');
     const remoteVideo = document.getElementById('remoteVideo');
 
-    // Request account and sign message with MetaMask (ethers.js)
+    // Request account and sign message with MetaMask (using ethers.js)
     loginBtn.onclick = async () => {
       if (!window.ethereum) {
         alert("MetaMask is required to login.");
+        return;
+      }
+      // Ensure the WebSocket is connected before proceeding
+      if (!ws || ws.readyState !== WebSocket.OPEN) {
+        alert("WebSocket is not connected yet. Please wait a moment.");
         return;
       }
       try {
@@ -109,7 +116,7 @@
         const address = await signer.getAddress();
         // Sign the login message
         const signature = await signer.signMessage(LOGIN_MESSAGE);
-        // Send login request to server
+        // Send login request to the server via WebSocket
         const loginReq = { type: 'login', address, signature };
         ws.send(JSON.stringify(loginReq));
       } catch (err) {
@@ -120,13 +127,13 @@
 
     // Initialize WebRTC peer connection and event handlers
     function setupPeerConnection() {
-      // STUN server configuration (public STUN servers to get ICE candidates)
+      // STUN server configuration to gather ICE candidates
       const config = { 
         iceServers: [{ urls: 'stun:stun.l.google.com:19302' }] 
       };
       pc = new RTCPeerConnection(config);
 
-      // When we get a local ICE candidate, send it to the peer via server
+      // When we get a local ICE candidate, send it to the peer via the signaling server
       pc.onicecandidate = event => {
         if (event.candidate) {
           ws.send(JSON.stringify({
@@ -137,7 +144,7 @@
         }
       };
 
-      // When remote track arrives, show it in the remote video element
+      // When a remote track arrives, display it in the remote video element
       pc.ontrack = event => {
         console.log('Received remote track');
         if (remoteVideo.srcObject !== event.streams[0]) {
@@ -149,36 +156,36 @@
       localStream.getTracks().forEach(track => pc.addTrack(track, localStream));
     }
 
-    // Handle messages from the signaling server
-    ws.onmessage = async (event) => {
+    // Handle messages received from the signaling server
+    ws && (ws.onmessage = async (event) => {
       const msg = JSON.parse(event.data);
       console.log('Received message', msg);
       switch (msg.type) {
         case 'login-success':
           userAddress = msg.address;
           loginStatus.textContent = "Connected as: " + userAddress;
-          // Show call UI
+          // Show the call UI once logged in
           callSection.style.display = 'block';
           break;
         case 'incoming-call':
-          // Another user is calling us
+          // Another user is calling
           const caller = msg.from;
           peerAddressInput.value = caller;
           alert(`Incoming call from ${caller}!`);
-          startCall(false); // start call as callee (don't create offer immediately)
+          startCall(false); // Start call as callee (don't create offer immediately)
           break;
         case 'call-ack':
-          // Server confirmed target is available, proceed to make an offer
-          startCall(true); // as caller
+          // Server confirmed target is available; proceed as caller
+          startCall(true);
           break;
         case 'offer':
-          // Received WebRTC offer from a caller
+          // Received a WebRTC offer from a caller
           if (!pc) {
-            console.log('Offer received, setting up peer connection (callee)');
+            console.log('Offer received, setting up peer connection as callee');
             await startCall(false);
           }
           await pc.setRemoteDescription(new RTCSessionDescription(msg.sdp));
-          // Create answer and send back
+          // Create an answer and send it back
           const answer = await pc.createAnswer();
           await pc.setLocalDescription(answer);
           ws.send(JSON.stringify({ 
@@ -188,11 +195,11 @@
           }));
           break;
         case 'answer':
-          // Got answer from callee (we are the caller)
+          // Received answer from callee (when acting as caller)
           await pc.setRemoteDescription(new RTCSessionDescription(msg.sdp));
           break;
         case 'ice-candidate':
-          // Received ICE candidate from peer
+          // Received an ICE candidate from peer
           if (pc && msg.candidate) {
             try {
               await pc.addIceCandidate(msg.candidate);
@@ -206,9 +213,9 @@
           alert(msg.error);
           break;
       }
-    };
+    });
 
-    // Start a call. If isCaller, we create the offer; if not, we wait for the offer.
+    // Start a call. If isCaller is true, create an offer; otherwise, wait for the offer.
     async function startCall(isCaller) {
       // Get media only once and reuse stream if already active
       if (!localStream) {
@@ -220,12 +227,12 @@
           return;
         }
       }
-      // Show video elements
+      // Show the video elements
       videoSection.style.display = 'block';
-      // Create peer connection and add tracks
+      // Create the peer connection and add tracks
       setupPeerConnection();
       if (isCaller) {
-        // Caller: create an offer and send to the callee
+        // As the caller, create an offer and send it to the callee
         const offer = await pc.createOffer();
         await pc.setLocalDescription(offer);
         ws.send(JSON.stringify({ 
@@ -236,7 +243,7 @@
       }
     }
 
-    // Call button initiates the call signaling
+    // Call button initiates the call signaling process
     callBtn.onclick = () => {
       const target = peerAddressInput.value.trim();
       if (!target) {
@@ -247,9 +254,9 @@
         alert("You must login first.");
         return;
       }
-      // Send call request to server
+      // Send a call request to the server
       ws.send(JSON.stringify({ type: 'call', target }));
-      // (We wait for 'call-ack' before creating offer)
+      // The offer will be created once a 'call-ack' message is received
     };
   </script>
 </body>
